Update yaml file

--- a/mongo_config.yaml
+++ b/mongo_config.yaml
@@ -11,12 +11,15 @@ spec:
   selector:
     run: mongocfg1
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongocfg1
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      run: mongocfg1
   template:
     metadata:
       labels:
@@ -54,12 +57,15 @@ spec:
   selector:
     run: mongocfg2
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongocfg2
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      run: mongocfg2
   template:
     metadata:
       labels:
@@ -97,12 +103,15 @@ spec:
   selector:
     run: mongocfg3
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongocfg3
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      run: mongocfg3
   template:
     metadata:
       labels:
