--- a/mongos.yaml
+++ b/mongos.yaml
@@ -11,7 +11,7 @@ spec:
   selector:
     run: mongos1
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongos1
@@ -54,7 +54,7 @@ spec:
   selector:
     run: mongos2
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongos2
