--- a/mongo_sh_3.yaml
+++ b/mongo_sh_3.yaml
@@ -12,7 +12,7 @@ spec:
   selector:
     run: mongosh3-1
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongosh3-1
@@ -56,7 +56,7 @@ spec:
   selector:
     run: mongosh3-2
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongosh3-2
@@ -100,7 +100,7 @@ spec:
   selector:
     run: mongosh3-3
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongosh3-3
