--- a/mongo_sh_4.yaml
+++ b/mongo_sh_4.yaml
@@ -12,7 +12,7 @@ spec:
   selector:
     run: mongosh4-1
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongosh4-1
@@ -56,7 +56,7 @@ spec:
   selector:
     run: mongosh4-2
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongosh4-2
@@ -100,7 +100,7 @@ spec:
   selector:
     run: mongosh4-3
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongosh4-3
