--- a/mongo_config.yaml
+++ b/mongo_config.yaml
@@ -38,7 +38,7 @@ spec:
             - name: mongocfg1
               mountPath: /data/db
         command: ["mongod"]
-        args: ["--noprealloc", "--smallfiles", "--replSet", "cfgrs", "--dbpath","/data/db", "--configsvr", "--noauth", "--bind_ip_all"]
+        args: ["--replSet", "cfgrs", "--dbpath","/data/db", "--configsvr", "--noauth", "--bind_ip_all"]
       volumes:
         - name: mongocfg1
           #persistentVolumeClaim:
@@ -84,7 +84,7 @@ spec:
             - name: mongocfg2
               mountPath: /data/db
         command: ["mongod"]
-        args: ["--noprealloc", "--smallfiles", "--replSet", "cfgrs", "--dbpath","/data/db", "--configsvr", "--noauth", "--bind_ip_all"]
+        args: ["--replSet", "cfgrs", "--dbpath","/data/db", "--configsvr", "--noauth", "--bind_ip_all"]
       volumes:
         - name: mongocfg2
           #persistentVolumeClaim:
@@ -130,7 +130,7 @@ spec:
             - name: mongocfg3
               mountPath: /data/db
         command: ["mongod"]
-        args: ["--noprealloc", "--smallfiles", "--replSet", "cfgrs", "--dbpath","/data/db", "--configsvr", "--noauth", "--bind_ip_all"]
+        args: ["--replSet", "cfgrs", "--dbpath","/data/db", "--configsvr", "--noauth", "--bind_ip_all"]
       volumes:
         - name: mongocfg3
           #persistentVolumeClaim:
