--- a/mongo_sh_1.yaml
+++ b/mongo_sh_1.yaml
@@ -30,7 +30,7 @@ spec:
       restartPolicy: Always
       hostname: mongosh1-1
       containers:
-      - image: mongo:latest
+      - image: mongodb/mongodb-enterprise-server
         name: mongosh1-1
         ports:
         - name: mongosh1-1
@@ -77,7 +77,7 @@ spec:
       restartPolicy: Always
       hostname: mongosh1-2
       containers:
-      - image: mongo:latest
+      - image: mongodb/mongodb-enterprise-server
         name: mongosh1-2
         ports:
         - name: mongosh1-2
@@ -124,7 +124,7 @@ spec:
       restartPolicy: Always
       hostname: mongosh1-3
       containers:
-      - image: mongo:latest
+      - image: mongodb/mongodb-enterprise-server
         name: mongosh1-3
         ports:
         - name: mongosh1-3
