--- a/mongo_sh_4.yaml
+++ b/mongo_sh_4.yaml
@@ -18,6 +18,9 @@ metadata:
   name: mongosh4-1
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      run: mongosh4-3
   template:
     metadata:
       labels:
@@ -62,6 +65,9 @@ metadata:
   name: mongosh4-2
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      run: mongosh4-3
   template:
     metadata:
       labels:
@@ -106,6 +112,9 @@ metadata:
   name: mongosh4-3
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      run: mongosh4-3
   template:
     metadata:
       labels:
