--- a/mongos.yaml
+++ b/mongos.yaml
@@ -17,6 +17,9 @@ metadata:
   name: mongos1
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      run: mongos1
   template:
     metadata:
       labels:
@@ -60,6 +63,9 @@ metadata:
   name: mongos2
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      run: mongos2
   template:
     metadata:
       labels:
