add flag shardsvr

--- a/mongo_sh_4.yaml
+++ b/mongo_sh_4.yaml
@@ -39,7 +39,7 @@ spec:
             - name: mongosh4-1
               mountPath: /data/db
         command: ["mongod"]
-        args: ["--replSet", "rs4", "--storageEngine", "inMemory", "--dbpath","/data/db", "--noauth", "--port", "27017", "--bind_ip_all"]
+        args: ["--shardsvr", "--replSet", "rs4", "--storageEngine", "inMemory", "--dbpath","/data/db", "--noauth", "--port", "27017", "--bind_ip_all"]
       volumes:
         - name: mongosh4-1
           #persistentVolumeClaim:
@@ -86,7 +86,7 @@ spec:
             - name: mongosh4-2
               mountPath: /data/db
         command: ["mongod"]
-        args: ["--replSet", "rs4", "--storageEngine", "inMemory", "--dbpath","/data/db", "--noauth", "--port", "27017", "--bind_ip_all"]
+        args: ["--shardsvr", "--replSet", "rs4", "--storageEngine", "inMemory", "--dbpath","/data/db", "--noauth", "--port", "27017", "--bind_ip_all"]
       volumes:
         - name: mongosh4-2
           #persistentVolumeClaim:
@@ -133,7 +133,7 @@ spec:
             - name: mongosh4-3
               mountPath: /data/db
         command: ["mongod"]
-        args: ["--replSet", "rs4", "--storageEngine", "wiredTiger", "--dbpath","/data/db", "--noauth", "--port", "27017", "--bind_ip_all"]
+        args: ["--shardsvr", "--replSet", "rs4", "--storageEngine", "wiredTiger", "--dbpath","/data/db", "--noauth", "--port", "27017", "--bind_ip_all"]
       volumes:
         - name: mongosh4-3
           #persistentVolumeClaim:
