--- a/mongo_sh_2.yaml
+++ b/mongo_sh_2.yaml
@@ -39,7 +39,7 @@ spec:
             - name: mongosh2-1
               mountPath: /data/db
         command: ["mongod"]
-        args: ["--replSet", "rs2", "--storageEngine", "inMemory", "--dbpath","/data/db", "--noauth", "--port", "27017", "--bind_ip_all"]
+        args: ["--shardsvr", "--replSet", "rs2", "--storageEngine", "inMemory", "--dbpath","/data/db", "--noauth", "--port", "27017", "--bind_ip_all"]
       volumes:
         - name: mongosh2-1
           #persistentVolumeClaim:
@@ -86,7 +86,7 @@ spec:
             - name: mongosh2-2
               mountPath: /data/db
         command: ["mongod"]
-        args: ["--replSet", "rs2", "--storageEngine", "inMemory", "--dbpath","/data/db", "--noauth", "--port", "27017", "--bind_ip_all"]
+        args: ["--shardsvr", "--replSet", "rs2", "--storageEngine", "inMemory", "--dbpath","/data/db", "--noauth", "--port", "27017", "--bind_ip_all"]
       volumes:
         - name: mongosh2-2
           #persistentVolumeClaim:
@@ -133,7 +133,7 @@ spec:
             - name: mongosh2-3
               mountPath: /data/db
         command: ["mongod"]
-        args: ["--replSet", "rs2", "--storageEngine", "wiredTiger", "--dbpath","/data/db", "--noauth", "--port", "27017", "--bind_ip_all"]
+        args: ["--shardsvr", "--replSet", "rs2", "--storageEngine", "wiredTiger", "--dbpath","/data/db", "--noauth", "--port", "27017", "--bind_ip_all"]
       volumes:
         - name: mongosh2-3
           #persistentVolumeClaim:
